syntax = "proto3";

package deployment.v1;

import "deployment/v1/messages.proto";

service DeploymentsService {
  rpc GetDeployment(deployment.v1.GetDeploymentRequest) returns (deployment.v1.GetDeploymentResponse) {}
  rpc GetDeploymentsByApps(deployment.v1.GetDeploymentsByAppsRequest) returns (deployment.v1.GetDeploymentsByAppsResponse) {}
  rpc GetDeploymentsByComponents(deployment.v1.GetDeploymentsByComponentsRequest) returns (deployment.v1.GetDeploymentsByComponentsResponse) {}
  rpc GetDeploymentsByInstalls(deployment.v1.GetDeploymentsByInstallsRequest) returns (deployment.v1.GetDeploymentsByInstallsResponse) {}
  rpc CreateDeployment(deployment.v1.CreateDeploymentRequest) returns (deployment.v1.CreateDeploymentResponse) {}
}
